# flexo

./: .clang-format  .gitattributes  .gitignore  CMakeCPack.cmake  CMakeLists.txt  LICENSE  README.adoc  _clang-format
cmake/: BuildGLAD.cmake  BuildStbImage.cmake  BuildTomlPlusPlus.cmake  ExternalProjects.cmake  FetchGLM.cmake  FetchWx.cmake
include/: AddDialog.hpp  Attachable.hpp  Bindable.hpp  Camera.hpp  Dataset.hpp  Dataset.inl  Drawable.hpp  EditableMesh.hpp  FlexoApp.hpp  Graphics.hpp  Guides.hpp  Image.hpp  IndexBuffer.hpp  InputData.hpp  InputData.inl  Lattice.hpp  LatticePanel.hpp  LearningRate.hpp  LightSource.hpp  MainPanel.hpp  MainWindow.hpp  Map.hpp  Map32List.hpp  Mesh.hpp  Node.hpp  ObjModel.hpp  Object.hpp  OpenGLCanvas.hpp  Project.hpp  ProjectPanel.hpp  ProjectSettings.hpp  ProjectWindow.hpp  RandomIntNumber.hpp  RandomNumber.hpp  RandomRealNumber.hpp  RenderTarget.hpp  Renderer.hpp  SceneOutlinerPanel.hpp  SelfOrganizingMap.hpp  SelfOrganizingMapPanel.hpp  (+35 more)
lib/: libSDL2-2.0.so.0.12.1
shader/: Edge.frag  Edge.vert  FlatShading.frag  FlatShading.vert  LatticeEdge.frag  LatticeEdge.vert  LatticeFace.frag  LatticeFace.vert  LatticeVertex.frag  LatticeVertex.vert  LightSource.frag  LightSource.vert  MapFace.frag  MapVertex.frag  MapVertex.vert  PolygonalModel.frag  PolygonalModel.vert  Screen.frag  SolidDrawable.frag  SolidDrawable.vert  Texture.frag  Texture.vert  TexturedDrawable.frag  VertexModel.frag  VertexModel.vert  VolumetricModel.frag  VolumetricModel.vert  WireDrawable.frag  default.frag  default.vert  lines.frag  nodes.vert
src/: .Renderer.cpp.kate-swp  AddDialog.cpp  CMakeLists.txt  (+61 more)
src/flexo/: CMakeLists.txt  Camera.cpp  EditableMesh.cpp  Geometry.cpp  LearningRate.cpp  Mesh.cpp  Project.cpp  ProjectWindow.cpp  Scene.cpp  SceneController.cpp  SelfOrganizingMap.cpp  VolumetricModelData.cpp  Voxel.cpp  main.cpp
src/flexo/assetlib/STL/: STLImporter.cpp
src/flexo/data/demo/: stanford_bunny.rvl  utah_teapot.rvl
src/flexo/dialog/: AddDialog.cpp  SelfOrganizingMapDialog.cpp  ViewportSettingsDialog.cpp
src/flexo/drawable/: CMakeLists.txt  Drawable.cpp  IndexedDrawable.cpp  InstancedDrawable.cpp  Overlays.cpp  SolidDrawable.cpp  TexturedDrawable.cpp  WireDrawable.cpp
src/flexo/drawable/include/: Drawable.hpp  IndexedDrawable.hpp  InstancedDrawable.hpp  Overlays.hpp  SolidDrawable.hpp  TexturedDrawable.hpp  WireDrawable.hpp
src/flexo/event/: ObjectSelectEvent.cpp  SliderFloatEvent.cpp  Vec3Event.cpp
src/flexo/gfx/: BindStep.cpp  CMakeLists.txt  Camera.cpp  DrawTask.cpp  EditableMesh.cpp  Graphics.cpp  Mesh.cpp  Renderer.cpp  Vertex.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexLayout.cpp
src/flexo/gfx/bindable/: Primitive.cpp  RasterizerState.cpp  Texture2D.cpp  VertexBuffer.cpp
src/flexo/gfx/bindable/program/: FragmentShaderProgram.cpp
src/flexo/gfx/drawable/: Drawable.cpp  DrawableBase.cpp  IndexedDrawable.cpp  InstancedDrawable.cpp  SolidDrawable.cpp  TexturedDrawable.cpp  WireDrawable.cpp
src/flexo/gfx/glwr/: IGLWRDepthStencilView.cpp  IGLWRRenderBuffer.cpp  IGLWRRenderTargetView.cpp  IGLWRResource.cpp  IGLWRSampler.cpp  IGLWRVertexShader.cpp
src/flexo/gfx/include/gfx/: DrawTask.hpp  Graphics.hpp  Mesh.hpp  Renderer.hpp  UniformBlock.hpp  VertexLayout.hpp
src/flexo/gfx/include/gfx/bindable/: Bindable.hpp  IndexBuffer.hpp  Sampler.hpp  Texture2D.hpp
src/flexo/gfx/include/gfx/bindable/program/: VertexShaderProgram.hpp
src/flexo/gfx/include/gfx/glwr/: IGLWRBase.hpp  IGLWRRenderBuffer.hpp  IGLWRState.hpp
src/flexo/include/: AnchorFunction.hpp  Dataset.hpp  Geometry.hpp  Map.cpp  Mesh.hpp  Neighborhood.hpp  Project.hpp  ProjectWindow.hpp  RandomNumber.hpp  Scene.hpp  SceneController.hpp  SelfOrganizingMap.hpp  SelfOrganizingMapModel.hpp  VolumetricModelData.hpp
src/flexo/include/assetlib/: BaseImporter.hpp
src/flexo/include/dialog/: AddDialog.hpp  SelfOrganizingMapDialog.hpp  ViewportSettingsDialog.hpp
src/flexo/include/event/: ObjectSelectEvent.hpp  SliderFloatEvent.hpp  Vec3Event.hpp
src/flexo/include/gfx/: Graphics.hpp  Renderer.hpp  Vertex.hpp  VertexArray.hpp  VertexBuffer.hpp
src/flexo/include/gfx/bindable/: InputLayout.hpp  Primitive.hpp  VertexBuffer.hpp
src/flexo/include/gfx/bindable/program/: FragmentShaderProgram.hpp
src/flexo/include/gfx/drawable/: Drawable.hpp  DrawableBase.hpp  IndexedDrawable.hpp  InstancedDrawable.hpp  SolidDrawable.hpp  WireDrawable.hpp
src/flexo/include/gfx/glwr/: GLWRPtr.hpp  IGLWRBuffer.hpp  IGLWRInputLayout.hpp  IGLWRRenderTargetView.hpp  IGLWRResource.hpp  IGLWRShaderResourceView.hpp  IGLWRTexture2D.hpp
src/flexo/include/object/: Cube.hpp  Grid.hpp  Map.cpp  Map.hpp  Object.hpp  ObjectList.hpp  Sphere.hpp  SurfaceVoxels.hpp
src/flexo/include/pane/: ControlsGroup.hpp  ControlsPaneBase.hpp  GuidesPropertiesPane.hpp  MapPropertiesPane.hpp  MeshObjectPropertiesPane.hpp  ObjectPropertiesPane.hpp  OutlinerPane.hpp  PropertiesPane.hpp  SceneOutlinerPane.hpp  SceneViewportPane.hpp  SelfOrganizingMapPane.hpp  TextureWidget.hpp  TransfromWidget.hpp  ViewportDisplayWidget.hpp
src/flexo/log/: CMakeLists.txt  Logger.c
src/flexo/log/include/log/: Logger.h
src/flexo/msw/: CMakeLists.txt
src/flexo/object/: Cube.cpp  Grid.cpp  Guides.cpp  Object.cpp  ObjectList.cpp  Plane.cpp  Sphere.cpp  SurfaceVoxels.cpp  Torus.cpp
src/flexo/pane/: ControlsGroup.cpp  ControlsPaneBase.cpp  GuidesPropertiesPane.cpp  MapPropertiesPane.cpp  MeshObjectPropertiesPane.cpp  OutlinerPane.cpp  PropertiesPane.cpp  SceneOutlinerPane.cpp  SceneViewportPane.cpp  SelfOrganizingMapPane.cpp  TextureWidget.cpp  TransformWidget.cpp  ViewportDisplayWidget.cpp
src/flexo/program/opengl/: CMakeLists.txt  SolidDrawable.frag  SolidDrawable.vert  WireDrawable.vert
src/flexo/shader/: CMakeLists.txt  LightSource.frag  LightSource.vert  Screen.frag  Screen.vert  SolidDrawable.vert  TexturedDrawable.vert  WireDrawable.vert
src/flexo/util/: CMakeLists.txt  Colors.cpp  EditableMesh.cpp  ResourcePath.cpp
src/flexo/util/include/: Colors.hpp  EditableMesh.hpp  ResourcePath.hpp.in  TransformStack.hpp  Wireframe.hpp
(+256 files in other folders)
